--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -16,3 +16,5 @@ include_dir = ./include
 lib_deps = 
 	olikraus/U8g2@^2.35.7
 	claws/BH1750@^1.3.0
+debug_tool = cmsis-dap
+upload_protocol = cmsis-dap
